--- a/.github/workflows/hko.yml
+++ b/.github/workflows/hko.yml
@@ -27,7 +27,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
       run: |
-        git clone https://x-access-token:${GITHUB_TOKEN}@github.com/<owner>/hko-tg-private.git
+        git clone https://x-access-token:${GITHUB_TOKEN}@github.com/iamCristYE/hko-tg-private.git
         cd hko-tg-private
 
     - name: Run warning check script
