--- a/.github/workflows/hko.yml
+++ b/.github/workflows/hko.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests python-telegram-bot beautifulsoup4
+        pip install requests python-telegram-bot beautifulsoup4 pytz
 
     - name: Clone private repo
       env:
