--- a/.github/workflows/hko.yml
+++ b/.github/workflows/hko.yml
@@ -23,6 +23,19 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests python-telegram-bot beautifulsoup4 pytz
 
+    - name: Poll for condition and run task
+      run: |
+              #!/bin/bash
+              while true; do
+                  current_hour=$(date +%H)
+                  if (( current_hour % 4 == 0 )); then
+                      break
+                  fi
+                  sleep 50
+              done
+              echo "Condition met! Task executed at $(date '+%Y-%m-%d %H:%M:%S')"
+              # Add your actual commands here (e.g., deploy, test)
+
     - name: Clone private repo
       env:
         GITHUB_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
